Agents work enhancements
